Apply for logout button, fix bug z-index

--- a/src/App.css
+++ b/src/App.css
@@ -102,8 +102,9 @@ button.sign-up {
     width: 201px;
     height: 61px;
 }
-.main-contain {
+.main-content {
     margin-top: 120px;
+    z-index: 5;
 }
 
 .item-ht {
@@ -136,6 +137,7 @@ button.sign-up {
     width: 600px;
     height: 108px;
     align-items: center;
+    z-index: 10;
 }
 
 .profile-menu a {
